--- a/css/global.css
+++ b/css/global.css
@@ -4,11 +4,22 @@ body {
 }
 
 ul {
-  margin: 0px;
   padding: 0px;
   list-style: none;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+h1,
+ul,
+p {
+  margin: 0px;
 }
