--- a/css/header.css
+++ b/css/header.css
@@ -21,6 +21,8 @@
 }
 
 .header-menu a {
+  font-family: "Poppins";
+  font-weight: 400;
   position: relative;
   display: inline-block;
   padding: 16px 0px;
