--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: #000;
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -21,13 +21,9 @@
 }
 
 .header-menu a {
-  font-family: "Poppins";
-  font-weight: 400;
   position: relative;
   display: inline-block;
   padding: 16px 0px;
-  color: #fff;
-  font-size: 18px;
 }
 
 .header-menu a::after {
@@ -36,7 +32,7 @@
   display: block;
   width: 0px;
   height: 2px;
-  background-color: #fff;
+  background-color: var(--cor-0);
   margin-top: 4px;
   transition: 0.3s;
 }
@@ -51,13 +47,13 @@
   }
 
   .header-menu a {
-    background-color: #111;
+    background-color: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
 
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--cor-10);
   }
 
   .header-menu a::after {
