--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -6,11 +6,7 @@
 .intro {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  box-sizing: border-box;
   gap: 0px 40px;
-  max-width: 1200px;
-  padding: 0px 20px;
-  margin: 0 auto;
 }
 
 .intro-conteudo {
@@ -19,6 +15,7 @@
 }
 
 .intro img {
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
