--- a/css/home/partners.css
+++ b/css/home/partners.css
@@ -47,6 +47,10 @@
     grid-template-columns: 1fr 1fr;
   }
 
+  .partners li {
+    padding: 20px;
+  }
+
   .partners li:nth-child(n + 3) {
     border-top: 2px solid var(--cor-2);
   }
