--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 @import "./home/intro.css";
 @import "./home/tech.css";
 @import "./home/partners.css";
+@import "./home/testimony.css";
 
 /* Bicycles */
 @import "./bicycle/bike-list.css";
