feat: add footer

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import "./global/global.css";
 @import "./utility/typography.css";
 @import "./utility/colors.css";
-
 @import "./global/header.css";
+@import "./global/footer.css";
 
 /* Utility */
 @import "./utility/components.css";
