--- a/css/utility/components.css
+++ b/css/utility/components.css
@@ -55,3 +55,24 @@
 .link:hover {
   color: var(--cor-0);
 }
+
+.titulo-bg {
+  padding: 60px 0px;
+  background-color: var(--cor-11);
+}
+
+.titulo p {
+  margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+  .titulo-bg {
+    padding: 40px 0px;
+  }
+
+  .titulo p {
+    font-style: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
+  }
+}
