--- a/css/insurance/insurance.css
+++ b/css/insurance/insurance.css
@@ -3,11 +3,15 @@
 }
 
 .insurance {
-  padding: 60px 0;
+  padding: 60px 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   align-items: center;
+}
+
+#insurance .insurance {
+  padding-top: 0px;
 }
 
 .insurance h2 {
@@ -19,6 +23,7 @@
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 }
 
 .insurance-item h3 {
