--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@
 
 /* Insurance */
 @import "./insurance/insurance.css";
+@import "./insurance/pros.css";
+@import "./insurance/questions.css";
 
 /* Terms */
 @import "./terms/terms.css";
