feat: add js and cleancss

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import "./global/global.css";
 @import "./utility/typography.css";
 @import "./utility/colors.css";
+@import "./utility/animation.css";
 @import "./global/header.css";
 @import "./global/footer.css";
 
