--- a/css/global/header.css
+++ b/css/global/header.css
@@ -35,7 +35,8 @@
   transition: 0.3s;
 }
 
-.header-menu a:hover::after {
+.header-menu a:hover::after,
+.header-menu a.active::after {
   width: 100%;
 }
 
